# nlohmann_json_glm

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
lib/: CMakeLists.txt
src/nlohmann/json/: glm.hpp
src/nlohmann/json/glm/: mat2x2.hpp  mat3x3.hpp  mat4x4.hpp  vec2.hpp  vec3.hpp  vec4.hpp
tests/: CMakeLists.txt
tests/read/: CMakeLists.txt  main.cpp
tests/simple/: CMakeLists.txt  main.cpp
tests/write/: CMakeLists.txt  main.cpp
